--- a/src/index.css
+++ b/src/index.css
@@ -22,12 +22,32 @@ body {
 
 .p-4 {
   background-color: #e0e0e0;
-  border: 1px solid black;
+  border: 1px solid #DBDBDB;
   color: black;
+  font-size: 1.5rem;
 }
 
 .btn-warning {
   background-color: #f5913e;
-  border: 1px solid black;
+  border: 1px solid #DBDBDB;
   color: black;
+  font-size: 1.5rem;
+}
+
+.col, .col-6 {
+  margin: 0px !important;
+  padding: 0px !important;
+}
+
+.row {
+  margin:0 !important;
+  padding: 0 !important;
+}
+
+.w-100 {
+  border-radius: 0 !important;
+}
+
+.result {
+  line-height: 43px;
 }
