--- a/src/index.css
+++ b/src/index.css
@@ -22,25 +22,26 @@ body {
 
 .p-4 {
   background-color: #e0e0e0;
-  border: 1px solid #DBDBDB;
+  border: 1px solid #dbdbdb;
   color: black;
   font-size: 1.5rem;
 }
 
 .btn-warning {
   background-color: #f5913e;
-  border: 1px solid #DBDBDB;
+  border: 1px solid #dbdbdb;
   color: black;
   font-size: 1.5rem;
 }
 
-.col, .col-6 {
-  margin: 0px !important;
-  padding: 0px !important;
+.col,
+.col-6 {
+  margin: 0 !important;
+  padding: 0 !important;
 }
 
 .row {
-  margin:0 !important;
+  margin: 0 !important;
   padding: 0 !important;
 }
 
