--- a/src/style/index.css
+++ b/src/style/index.css
@@ -2,7 +2,19 @@
   margin: 0;
   padding: 0;
   box-sizing: inherit;
-  color: #fff;
+  color: var(--white-clr);
+}
+
+:root {
+  --bg-primary: #3450a1;
+  --bg-secondary: #041955;
+  --white-clr: #fff;
+  --gray-clr: #bbc2d8;
+  --border-clr: #d103fc;
+}
+
+::selection {
+  background-color: var(--border-clr);
 }
 
 html {
@@ -14,13 +26,13 @@ body {
   font-family: 'Lato', sans-serif;
   font-size: 20px;
   margin: 10rem;
+  color: red;
 }
 
 .p-4 {
-  background-color: #e0e0e0;
   border: 1px solid #dbdbdb;
   color: black;
-  font-size: 1.5rem;
+  background-color: var(--bg-primary);
 }
 
 .btn-warning {
@@ -43,11 +55,4 @@ body {
 
 .w-100 {
   border-radius: 0 !important;
-}
-
-.result {
-  background-color: gray;
-  line-height: 43px;
-  min-height: 7vh;
-  text-align: right;
 }
